Added offer form pages

--- a/src/app/modules/supplier-portal/layouts/supplier-portal-footer/supplier-portal-footer.component.html
+++ b/src/app/modules/supplier-portal/layouts/supplier-portal-footer/supplier-portal-footer.component.html
@@ -1,1 +1,18 @@
-<!-- <p>supplier-portal-footer works!</p> -->
+<section class="bg-gsa-light-grey px-0 py-2 m-0 sticky-bottom" >
+    <div class="container-fluid px-0">    
+      <div class="mx-auto">
+        <div class="">
+            <div class="container-fluid px-5">
+            <div class="row">
+              <div class="col-sm-12 col-lg text-center"> 
+                <span class="gsa-medium-blue m-0 py-2 ">
+                  FedBizOpps &nbsp;&nbsp;&bull;&nbsp;&nbsp; SAM &nbsp;&nbsp;&bull;&nbsp;&nbsp; GSA &nbsp;&nbsp;&bull;&nbsp;&nbsp; GSA Advantage! &nbsp;&nbsp;&bull;&nbsp;&nbsp; Accessibility Aids &nbsp;&nbsp;&bull;&nbsp;&nbsp; 1-866 472-9114 &nbsp;&nbsp;&bull;&nbsp;&nbsp; eoffer@gsa.gov         
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
