--- a/src/app/modules/supplier-portal/views/org-selection/org-selection.component.html
+++ b/src/app/modules/supplier-portal/views/org-selection/org-selection.component.html
@@ -63,31 +63,7 @@
                                         <input type="text" class="form-control" id="inputEmail4">
                                     </div>
                                 </div>
-                                <!-- <div class="form-row">
-                                    <div class="form-group col-md-6">
-                                        <label for="inputEmail4">DUNS/UEI Number</label>
-                                        <input type="email" class="form-control" id="inputEmail4">
-                                    </div>
-                                </div>
-                                <div class="form-row">
-                                    <div class="form-group col-md-6">
-                                        <label for="inputCity">City</label>
-                                        <input type="text" class="form-control" id="inputCity">
-                                    </div>
-                                    <div class="form-group col-md-2">
-                                        <label for="inputZip">Zip</label>
-                                        <input type="text" class="form-control" id="inputZip">
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" id="gridCheck">
-                                        <label class="form-check-label" for="gridCheck">
-                                            Check me out
-                                        </label>
-                                    </div>
-                                </div> -->
-                                <button type="submit" class="btn btn-primary">Submit</button>
+                                <button class="btn btn-primary" [routerLink]="['/supplier-portal/home']">Submit</button>
                             </form>
                         </div>
                     </div>
