--- a/src/assets/theme/gsa.css
+++ b/src/assets/theme/gsa.css
@@ -91,6 +91,11 @@ html, body {
 .sticky-top {
   top: 1.5rem;
 }
+
+.sticky-bottom {
+  position: fixed;
+  bottom: 0;
+}
 /*
 .navbar-toggleable-lg .navbar-nav {
     -webkit-box-orient: horizontal;
