--- a/src/app/modules/supplier-portal/components/organization-details-banner/organization-details-banner.component.html
+++ b/src/app/modules/supplier-portal/components/organization-details-banner/organization-details-banner.component.html
@@ -1,22 +1,24 @@
-<div class="container-fluid">
-    <div class="row">
-        <div class="col px-0 py-3 mb-0 shadow bg-gsa-light-blue ">
-            <div class="px-5">
-                <div class="row">
-                    <div class="col-sm-12 col-md-6">
-                        <b>Company Name:&nbsp;&nbsp;</b>ABC Co.
+<section class="shadow bg-gsa-light-blue">
+    <div class="container py-2">
+
+                <div class="row justify-content-center">
+                    <div class="col-md">
+                        <small>Company Name:&nbsp;&nbsp;</small> 
+                        <br class="d-sm-none d-md-block" /> ABC Co.
                     </div>
-                    <div class="col-sm-12 col-md-6">
-                        <b>Solicitaion Number:&nbsp;&nbsp;</b>47QSMD20R001 Refresh #45
+                    <div class="col-md">
+                        <small>Solicitaion Number:&nbsp;&nbsp;</small>
+                        <br class="d-sm-none d-md-block"/> 47QSMD20R001 Refresh #45
                     </div>
-                    <div class="col-sm-12 col-md-6">
-                        <!-- <b>Schedule:&nbsp;&nbsp;</b>MAS - Multiple Award Schedule -->
+                    <!--
+                    <div class="col">
+                         <b>Schedule:&nbsp;&nbsp;</b>MAS - Multiple Award Schedule 
                     </div>
-                    <div class="col-sm-12 col-md-6">
-                        <b>Schedule:&nbsp;&nbsp;</b>MAS - Multiple Award Schedule
+                    -->
+                    <div class="col-md">
+                        <small>Schedule:&nbsp;&nbsp;</small>
+                        <br class="d-sm-none d-md-block"/> MAS - Multiple Award Schedule
                     </div>
                 </div>
-            </div>
-        </div>
     </div>
-</div>
+</section>
