--- a/src/app/modules/supplier-portal/layouts/supplier-portal-workspace-layout/supplier-portal-workspace-layout.component.html
+++ b/src/app/modules/supplier-portal/layouts/supplier-portal-workspace-layout/supplier-portal-workspace-layout.component.html
@@ -1,13 +1,13 @@
 <section class="" style="min-height: 600px;">
     <div class="container-fluid px-5 py-5">
         <div class="row content-row pb-3">
-            <div class="col-sm-12 col-lg-3 pt-3">                
+            <div class="col-sm-12 col-md-4 col-lg-3 col-xl-3">                
                 <ng-container *ngIf="aside">
                     <ng-container [ngTemplateOutlet]="aside"></ng-container>
                 </ng-container>
             </div>
-            <div class="col-lg-9">
-                <div class="article-container">
+            <div class="col">
+                
                     <div class="row">
                         <div class="col-lg">               
                             <ng-container *ngIf="body">
@@ -15,7 +15,7 @@
                             </ng-container>
                         </div>
                     </div>
-                </div>
+                
             </div>
         </div>
     </div>
