--- a/src/app/modules/supplier-portal/components/organization-details-banner/organization-details-banner.component.html
+++ b/src/app/modules/supplier-portal/components/organization-details-banner/organization-details-banner.component.html
@@ -1,4 +1,4 @@
-<section class="shadow bg-gsa-light-blue">
+<section class="shadow bg-gsa-light-blue white d-block">
     <div class="container py-2">
 
                 <div class="row justify-content-center">
