--- a/src/app/modules/supplier-portal/layouts/supplier-portal-workspace-layout/supplier-portal-workspace-layout.component.html
+++ b/src/app/modules/supplier-portal/layouts/supplier-portal-workspace-layout/supplier-portal-workspace-layout.component.html
@@ -1,7 +1,7 @@
-<section class="" style="min-height: 600px;">
+<section class="">
     <div class="container-fluid px-5 py-5">
         <div class="row content-row pb-3">
-            <div class="col-sm-12 col-md-4 col-lg-3 col-xl-3">                
+            <div class="col-sm-12 col-md-4 col-lg-3 col-xl-3 d-xs-none d-sm-none d-md-block">                
                 <ng-container *ngIf="aside">
                     <ng-container [ngTemplateOutlet]="aside"></ng-container>
                 </ng-container>
@@ -11,6 +11,7 @@
                     <div class="row">
                         <div class="col-lg">               
                             <ng-container *ngIf="body">
+                                <div class="btn btn-outline-primary d-xs-block d-sm-block d-md-none mb-4">Form Navigator</div>
                                 <ng-container [ngTemplateOutlet]="body"></ng-container>
                             </ng-container>
                         </div>
