--- a/src/app/modules/supplier-portal/views/offer-form/available-offerings/available-offerings.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/available-offerings/available-offerings.component.html
@@ -1,1 +1,154 @@
-<p>available-offerings works!</p>
+<form id="availableOfferings">
+    <div class="card border-warning p-4 mb-4">
+        <p>
+            <b class="black">What goods and services do you provide?</b>
+            <br>
+            GSA assigns all available offerings to large categories, subcategories, and Special Item Numbers (SINs).
+        </p>
+    </div>
+    <hr><span id="addsins" class="visually-hidden">Add SINs</span>
+    <p>You must add at least one large category, subcategory, and SIN and you may only add one at a time. For a full
+        list of available offerings, please visit the <a target="_blank" title="MAS Roadmap"
+            href="https://www.gsa.gov/masroadmap">MAS Roadmap</a>.</p>
+    <div class="table2">
+        <table role="presentation" class="table table-bordered table-striped" width="100%" aria-labelledby="addsins"
+            id="addSIN">
+            <tbody>
+                <tr>
+                    <td aria-hidden="true" class="fakeTh" width="70%">Add SIN(s)<span class="required"> *</span></td>
+                    <td aria-hidden="true" class="fakeTh" width="30%">Action</td>
+                </tr>
+                <tr>
+                    <td><label for="largeCategoryId">Large Category: </label><select style="max-width:400px"
+                            aria-required="true" class="d-control samesize" name="largeCategory" id="largeCategoryId">
+                            <option value="">Select a Large Category</option>
+                            <option value="B">Facilities</option>
+                            <option value="C">Furniture and Furnishings</option>
+                            <option value="D">Human Capital</option>
+                            <option value="E">Industrial Products and Services</option>
+                            <option value="F">Information Technology</option>
+                            <option value="G">Miscellaneous</option>
+                            <option value="A">Office Management</option>
+                            <option value="H">Professional Services</option>
+                            <option value="I">Scientific Management and Solutions</option>
+                            <option value="J">Security and Protection</option>
+                            <option value="K">Transportation and Logistics Services</option>
+                            <option value="L">Travel</option>
+                        </select></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td><label for="subCategoryId">Subcategory: </label><select style="max-width:400px"
+                            aria-required="true" class="d-control samesize" name="subCategory" id="subCategoryId">
+                            <option value="">Select a Subcategory</option>
+                        </select></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td><label for="sintypeId">SIN :</label><select style="max-width:400px" aria-required="true"
+                            class="d-control samesize" aria-label="Select SINs" name="sintype" id="sintypeId">
+                            <option value="">Select a SIN</option>
+                        </select></td>
+                    <td><input id="idAddSin" class="btn btn-primary btn-sm" value="Add SIN Details" name="sinType"
+                            type="Submit"></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="table2">
+        <h2 id="yoursin" class="type1">Your SIN(s)</h2>
+        <table aria-labelledby="yoursin" class="table table-bordered table-striped buttonsTable" id="yourSINs">
+            <thead>
+                <tr class="columnTitleFill">
+                    <th width="10%">Number</th>
+                    <th width="25%" scope="col">Title</th>
+                    <th width="25%" scope="col">Large Category</th>
+                    <th width="20%" scope="col">Subcategory</th>
+                    <th width="10%" scope="col">Edit</th>
+                    <th width="10%" scope="col">Delete</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>54151HEAL</td>
+                    <td>Health Information Technology Services</td>
+                    <td>Information Technology</td>
+                    <td>IT Services</td>
+                    <td class="tbl-button"><a class="btn btn-primary btn-sm"
+                            title="Edit 54151HEAL Health Information Technology Services SINs"
+                            href="https://eoffer-test.fas.gsa.gov/eOffer/offerSinTypeAction.do?method=edit&amp;sintype=54151HEAL">Edit</a>
+                    </td>
+                    <td class="tbl-button"><a class="btn btn-primary btn-sm"
+                            title="Delete 54151HEAL Health Information Technology Services SINs"
+                            href="https://eoffer-test.fas.gsa.gov/eOffer/deleteAction.do?method=delete&amp;source=deleteSin&amp;deleteSinType=54151HEAL">Delete</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="table2">
+        <h2 style="border-top: 5px solid grey;"></h2>
+    </div>
+    <div class="table2">
+        <h2 id="prework" class="type1">Preponderance Of Work</h2>
+        <p>Please complete the 'Preponderance of Work' section only after you have completed adding all offerings to
+            your offer. The information below will populate based on the offerings you selected above. Offerors must
+            choose one preponderance of work large category, subcategory, SIN and NAICS for the offer as a whole.</p>
+        <table role="presentation" aria-labelledby="prework" class="table table-bordered table-striped" id="prepWork">
+            <tbody>
+                <tr>
+                    <td colspan="2" aria-hidden="true" class="fakeTh" width="100%">
+                        Select Preponderance of Work
+                    </td>
+                </tr>
+                <tr border="0">
+                    <td width="70%"><label for="selectedLargeCategoryId">Large Category:</label><select size="1"
+                            id="selectedLargeCategoryId" class="d-control" aria-required="true"
+                            name="selectedLargeCategory">
+                            <option value="">Select a Large Category</option>
+                            <option value="F">Information Technology</option>
+                        </select></td>
+                    <td width="30%"></td>
+                </tr>
+                <tr border="0">
+                    <td><label for="selectedSubcategoryId">Subcategory:</label><select size="1"
+                            id="selectedSubcategoryId" class="d-control" aria-required="true"
+                            name="selectedSubcategory">
+                            <option value="">Select a Subcategory</option>
+                            <option value="F03">IT Services</option>
+                        </select></td>
+                    <td></td>
+                </tr>
+                <tr border="0">
+                    <td><label for="selectedSinId">SIN:</label><select style="max-width:400px" size="1"
+                            id="selectedSinId" class="d-control" aria-required="true" name="selectedSin">
+                            <option value="">Select a SIN</option>
+                            <option value="54151HEAL">54151HEAL Health Information Technology Services</option>
+                        </select></td>
+                    <td></td>
+                </tr>
+                <tr border="0">
+                    <td><label for="preponderanceOfWorkId">Vendor proposed preponderance of work:<span
+                                class="required">&nbsp;*&nbsp;</span></label><select size="1" id="preponderanceOfWorkId"
+                            class="d-control" aria-required="true" name="PreponderanceOfWork">
+                            <option value="">Select NAICS</option>
+                            <option value="541511">541511</option>
+                            <option value="541512">541512</option>
+                            <option value="541513">541513</option>
+                            <option value="541519">541519</option>
+                        </select></td>
+                    <td width="30%"><input id="idPreponEdit" class="btn btn-primary btn-sm"
+                            value="Edit Preponderance of Work" name="sinTypeAction" type="Submit"></td>
+                </tr>
+                <tr>
+                    <td nowrap="yes" colspan="2">Selected Preponderance Of Work is:&nbsp;541511</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+
+    <div class="button-row">
+        <input type="submit" value="Save and Continue" class="btn btn-primary" name="saveAndContinue">
+    </div>
+</form>
