--- a/src/app/modules/supplier-portal/views/offer-form/corporate-information/corporate-information.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/corporate-information/corporate-information.component.html
@@ -1,1 +1,140 @@
-<p>corporate-information works!</p>
+<form id="corporateInformation">
+    <div class="card p-4 border-warning mb-4">
+
+        <p>
+            <b>Is the information correct?</b>
+        </p>
+        <p>
+            This information is taken directly from <a href="http://www.sam.gov/" target="_blank">System for Award Management (SAM)</a>. If any of this information is incorrect, it must be corrected through <a href="http://www.sam.gov/" target="_blank">System for Award Management (SAM)</a>. Any changes will be reflected in eOffer in approximately 24 hours.
+        </p>
+        
+    </div>
+    <div class="corset">
+		<h2 class="type1">Company Details</h2>
+		<table id="corpDUNS" class="table table-bordered" role="presentation">
+			<tbody><tr>
+				<td class="first" width="40%">UEI Number:</td>
+				<td width="60%">
+					DN1AKEH8VZU7
+				</td>
+			</tr>
+			<tr>
+				<td class="first">Type of Organization:</td>
+				<td class="camel">
+					Corporate Entity (Not Tax Exempt)
+				</td>
+			</tr>
+			<tr>
+				<td class="first">Common Parent UEI Number:</td>
+				<td>
+					
+				</td>
+			</tr>
+			<tr>
+				<td class="first">Company Name:</td>
+				<td class="camel">NOMADIC DISPLAY CAPITOL INC</td>
+			</tr>
+			<tr>
+				<td class="first">Doing Business As (DBA):</td>
+				<td class="camel">NOMADIC DISPLAY</td>
+			</tr>
+			<tr>
+				<td class="first">Business Type(s) Registered in SAM: </td>
+				<td class="camel">
+					For-Profit Organization, Manufacturer of Goods.
+				</td>
+			</tr>
+			
+			<tr>
+				<td class="first">Business Website:</td>
+				<td class="alllow">
+					www.nomadicdisplay.com
+				</td>	
+			</tr>
+		</tbody></table>
+
+		 
+		<h2 class="type1">Company Address</h2>
+		<table id="corpAddress" class="table table-bordered" role="presentation">
+			
+			<tbody><tr>
+				<td class="first" width="40%">Street1:</td>
+				<td width="60%" class="camel">
+					10505 FURNACE RD STE 108
+				</td>
+			</tr>
+			<tr>
+				<td class="first">Street2:</td>
+				<td class="camel"></td>
+			</tr>
+			<tr>
+				<td class="first">City:</td>
+				<td class="camel">LORTON</td>
+			</tr>
+			<tr>
+				<td class="first">State:</td>
+				<td class="allcap">VA</td>
+			</tr>
+			<tr>
+				<td class="first">Zip/Postal Code:</td>
+				<td>220792635</td>
+			</tr>
+			<tr>
+				<td class="first">Country:</td>
+				<td class="camel">USA</td>
+			</tr>
+		</tbody></table>
+
+		 
+		<h2 class="type1">Mailing Address</h2>
+		<table class="table table-bordered" role="presentation">
+			
+			<tbody><tr>
+				<td class="first" width="40%">Company Name:</td>
+				<td width="60%" class="camel">NOMADIC DISPLAY CAPITOL INC</td>
+			</tr>
+			<tr>
+				<td class="first">Street1:</td>
+				<td class="camel">10505 FURNACE RD STE 108</td>
+			</tr>
+			<tr>
+				<td class="first">Street2:</td>
+				<td class="camel"></td>
+			</tr>
+			<tr>
+				<td class="first">City:</td>
+				<td class="camel">LORTON</td>
+			</tr>
+			<tr>
+				<td class="first">State:</td>
+				<td class="allcap">VA</td>
+			</tr>
+			<tr>
+				<td class="first">Zip/Postal Code:</td>
+				<td>220792635</td>
+			</tr>
+			<tr>
+				<td class="first">Country:</td>
+				<td class="camel">USA</td>
+			</tr>
+		</tbody></table>
+	</div>
+
+	<form id="saveAndContinueAction" name="editForm" action="https://eoffer-test.fas.gsa.gov/eOffer/saveAndContinueAction.do" method="post">
+		<input type="hidden" name="token" value="null">
+		<input type="hidden" name="method" value="saveAndContinue" id="saveAndContinueAction_method">
+		<input type="hidden" name="pageName" value="corporateInformation" id="saveAndContinueAction_pageName">
+		
+			
+				<div class="button-row-in">
+					<input type="submit" value="Sign Out and Correct Errors in SAM" class="btn btn-default" name="saveAndContinue">
+					<input type="submit" value="Save and Continue" class="btn btn-primary" name="saveAndContinue">
+				 </div>
+			
+		
+ 		
+	</form>
+
+
+
+</form>
