--- a/src/app/modules/supplier-portal/views/offer-form/pathway-to-success/pathway-to-success.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/pathway-to-success/pathway-to-success.component.html
@@ -1,1 +1,43 @@
-<p>pathway-to-success works!</p>
+<form id="pathwayToSuccess">
+        <input type="hidden" name="token" value="5E0DVXKY6INHIOE0EEXNIET7E9282269">
+        <input type="hidden" name="pageName" value="pathwayToSuccess" id="pathwayToSuccessCertAction_pageName">
+        <input type="hidden" name="saveAndContinue" value="Save and Continue" id="pathwayToSuccessCertAction_saveAndContinue">
+        <input type="hidden" name="method" value="saveSelfCerts" id="pathwayToSuccessCertAction_method">
+
+        
+        <h1 class="h4">PATHWAY TO SUCCESS AND READINESS ASSESSMENT REQUIREMENTS</h1>
+        <!-- <span class="required2">* Required</span><br class="clearBoth"> -->
+        <h2 class="h5">Complete Section 1 if you are a new offeror OR complete Section 2 if you are an existing FSS contractor submitting a streamlined offer.</h2>
+        
+        <br><br>
+        <h2 class="h6">SECTION 1 (NEW OFFERORS ONLY)</h2>
+        <span class="h6">You are required to complete the “Pathway to Success” training and the “Readiness Assessment” located at <a href="http://www.gsa.gov/masroadmap">www.gsa.gov/masroadmap</a>. The Pathway to Success training provides an overview of the GSA Schedule, the offer process and required information, and considerations you need to make as you are developing your offer.  The Readiness Assessment is a series of questions that helps you determine the readiness of your company to become a successful GSA Schedule contractor.</span>
+        <br>
+        <br>
+        <div>
+            <input type="checkbox" name="pathwayAcknowledged" value="true" checked="checked" id="pathwayToSuccessCertAction_pathwayAcknowledged"><input type="hidden" id="__checkbox_pathwayToSuccessCertAction_pathwayAcknowledged" name="__checkbox_pathwayAcknowledged" value="true">
+            I acknowledge that I have downloaded and completed the <b>“Pathway to Success”</b> training located at&nbsp;<a href="http://www.gsa.gov/masroadmap:">www.gsa.gov/masroadmap</a>&nbsp;within the past 12 months. &nbsp;
+        </div>
+        <br>
+        <div>
+            <input type="checkbox" name="readinessAcknowledged" value="true" checked="checked" id="pathwayToSuccessCertAction_readinessAcknowledged"><input type="hidden" id="__checkbox_pathwayToSuccessCertAction_readinessAcknowledged" name="__checkbox_readinessAcknowledged" value="true">
+            I acknowledge that I have downloaded and completed the <b>“Readiness Assessment”</b> located at&nbsp;<a href="http://www.gsa.gov/masroadmap">www.gsa.gov/masroadmap</a>&nbsp;within the past 12 months.&nbsp;
+        </div>
+
+        
+        <br><br>
+        <h2 class="h6">SECTION 2 (EXISTING FSS CONTRACTOR ONLY)</h2>
+        <span class="h6">If you are an existing FSS contract holder and this is a streamlined offer you are not required to complete the Pathway to Success and the Readiness Assessment.</span>
+        
+        <br><br>
+        <div>
+            <input type="checkbox" name="existingFssContractor" value="true" id="pathwayToSuccessCertAction_existingFssContractor"><input type="hidden" id="__checkbox_pathwayToSuccessCertAction_existingFssContractor" name="__checkbox_existingFssContractor" value="true">
+            I acknowledge that I am an existing FSS contractor submitting a streamlined offer.
+        </div>
+
+        <br><br>
+        <hr>
+        
+        <div class="button-row">
+            <input type="submit" value="Save and Continue" id="pathwayToSuccessCertAction_0" class="btn btn-primary">
+        </div>
