--- a/src/app/modules/supplier-portal/views/offer-form/solicitation-clauses/solicitation-clauses.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/solicitation-clauses/solicitation-clauses.component.html
@@ -1,1 +1,81 @@
-<p>solicitation-clauses works!</p>
+<form id="solicitationClauses">
+    
+    <div class="card border-warning p-4 mb-4">
+        <p class="clearBoth">Please respond to the below terms and conditions that apply to your proposed offerings.</p>
+        <p>You must respond to all clauses to complete this section.</p>
+    </div>
+
+
+    <h2 id="clau" class="type1">Clauses</h2>
+    <table aria-labelledby="clau" class="table table-bordered table-striped buttonsTable" id="tempTable">
+        <thead>
+            <tr>
+                <th width="40%" scope="col">
+                    Template Name
+                </th>
+                <th width="20%" scope="col">
+                    Status
+                </th>
+                <th width="10%" scope="col">
+                    Edit
+                </th>
+                <th width="10%" scope="col">
+                    Delete
+                </th>
+                <th width="10%" scope="col">
+                    Respond
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>
+                    Basic Information <span class="required">*</span></td>
+                <td>
+                    Incomplete
+                </td>
+                <td></td>
+                <td></td>
+                <td class="tbl-button"><a class="btn btn-primary btn-sm" title="Respond to Input"
+                        href="https://eoffer-test.fas.gsa.gov/eOffer/offerSolClauseAction.do?method=view&amp;type=basicFormatted">Respond</a>
+                </td>
+            </tr>
+            <tr>
+                <td>Commercial Sales Practice<span class="required"> *</span></td>
+                <td>
+                    Incomplete
+                </td>
+                <td class="tbl-button"></td>
+                <td class="tbl-button"></td>
+                <td class="tbl-button"><a class="btn btn-primary btn-sm" title="Respond to Input"
+                        href="https://eoffer-test.fas.gsa.gov/eOffer/offerSolClauseAction.do?type=commercialsalespractice&amp;method=view">
+                        Respond
+                    </a></td>
+            </tr>
+            <tr>
+                <td>
+                    Point of Contacts Information<span class="required"> *</span></td>
+                <td>
+                    Incomplete
+                </td>
+                <td></td>
+                <td></td>
+                <td class="tbl-button"><a class="btn btn-primary btn-sm" title="Respond to Input"
+                        href="https://eoffer-test.fas.gsa.gov/eOffer/offerSolClauseAction.do?method=view&amp;type=pocInfo">Respond</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Ordering Information<span class="required"> *</span></td>
+                <td>
+                    Incomplete
+                </td>
+                <td></td>
+                <td></td>
+                <td class="tbl-button"><a class="btn btn-primary btn-sm" title="Respond to Input"
+                        href="https://eoffer-test.fas.gsa.gov/eOffer/offerSolClauseAction.do?method=view&amp;type=orderInfo">Respond</a>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</form>
