--- a/src/app/modules/supplier-portal/layouts/supplier-portal-workspace-layout/supplier-portal-workspace-layout.component.html
+++ b/src/app/modules/supplier-portal/layouts/supplier-portal-workspace-layout/supplier-portal-workspace-layout.component.html
@@ -1,4 +1,4 @@
-<section class="">
+<section>
     <div class="container-fluid px-5 py-5">
         <div class="row content-row pb-3">
             <div class="col-sm-12 col-md-4 col-lg-3 col-xl-3 d-xs-none d-sm-none d-md-block">                
