--- a/src/app/modules/supplier-portal/views/offer-form/negotiators/negotiators.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/negotiators/negotiators.component.html
@@ -1,1 +1,76 @@
-<p>negotiators works!</p>
+<form id="negotiators">
+
+    <div class="card border-warning p-4 mb-4">
+        <p><b class="black">Who will negotiate your eOffer?</b></p>
+        <p align="justify">Offerors can add multiple negotiators. A minimum of one negotiator must have signature
+            authority, but it is STRONGLY recommended to have at least two valid Negotiators.
+            Negotiators without signature authority may prepare the eOffer but only negotiators with signature authority
+            may submit the eOffer and sign the Contract.
+        </p>
+    </div>
+    <div class="table2">
+        <h2 class="type1" id="yournegs">Your Negotiator(s)</h2>
+        <table id="negInfo" class="table table-striped table-bordered buttonsTable" aria-labelledby="yournegs">
+            <thead>
+                <tr>
+                    <th scope="col" width="40%">Name</th>
+                    <th scope="col" width="40%">Role</th>
+
+
+
+                    <th scope="col" width="10%">Edit</th>
+                    <th scope="col" width="10%">Delete</th>
+
+                </tr>
+            </thead>
+            <tbody>
+
+
+
+                <script language="JavaScript" type="text/javascript">< !--hide this script from non - javascript - enabled browsers
+                    function preSelect(name, value) {
+                        for (i = 0; i < name.length; i++) {
+                            if (name[i].value == value) {
+                                name.selectedIndex = i;
+                                break;
+                            }
+                        }
+                    }
+// stop hiding -->
+
+                </script>
+                <tr>
+                    <td>Luis Najera</td>
+                    <td>Authorized to sign</td>
+                    <td class="tbl-button"><a title="Edit Negotiator Luis Najera Details"
+                            href="https://eoffer-test.fas.gsa.gov/eOffer/offerNegotiatorAction.do?method=edit&amp;Type=editnegotiator&amp;negotiatorId=1"
+                            class="btn btn-primary btn-sm">Edit</a></td>
+                    <td class="tbl-button"><a title="Delete Negotiator Luis Najera Details"
+                            href="https://eoffer-test.fas.gsa.gov/eOffer/deleteAction.do?method=delete&amp;source=negotiator&amp;negotiatorId=1"
+                            class="btn btn-primary btn-sm">Delete</a></td>
+                </tr>
+
+            </tbody>
+        </table>
+
+
+
+
+    </div>
+
+    <!--negotiator list Ends-->
+
+    <div class="button-row">
+        <input type="submit" value="Add New Negotiator" class="btn btn-default" name="addNewNegotiator">
+
+
+
+        <input type="Submit" value="Save and Continue" class="btn btn-primary" name="saveAndContinue">
+
+
+
+
+
+    </div>
+
+</form>
