--- a/src/app/modules/supplier-portal/views/offer-form/offer-form.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/offer-form.component.html
@@ -1,9 +1,51 @@
 <app-supplier-portal-workspace-layout>
-    <ng-template #aside>
-        <app-offer-form-side-nav></app-offer-form-side-nav>
-    </ng-template>
-    <ng-template #body>
-      <router-outlet></router-outlet>
-    </ng-template>
+
+  <ng-template #aside>
+    <app-offer-form-side-nav [menuItems]="formData.sections"></app-offer-form-side-nav>
+  </ng-template>
+
+  <ng-template #body>
+
+    <!-- <div class="usa-alert usa-alert-info">
+      <div class="usa-alert-body">
+        text
+      </div>
+    </div>
+
+    <div class="usa-alert usa-alert-warning">
+      <div class="usa-alert-body">
+        text
+      </div>
+    </div>
+
+    <div class="usa-alert usa-alert-error">
+      <div class="usa-alert-body">
+        text
+      </div>
+    </div>
+
+    <div class="usa-alert usa-alert-success">
+      <div class="usa-alert-body">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+        laborum.
+      </div>
+    </div> -->
+
+    <accordion [isAnimated]="true" [closeOthers]="true" *ngFor="let section of formData.sections">
+      <app-form-accordion [formAccordionTitle]="section.name" [sectionIsComplete]="section.isComplete">
+        <ng-template #formAccordionBody>
+          <ng-temlpate [ngComponentOutlet]="section.component"></ng-temlpate>
+        </ng-template>
+      </app-form-accordion>
+    </accordion>
+
+    <div class="mt-4">
+      <button type="submit" class="btn btn-success" disabled>Submit Offer</button>
+    </div>
+
+  </ng-template>
+
 </app-supplier-portal-workspace-layout>
-  
