--- a/src/app/modules/supplier-portal/views/offer-form/solicitation-provisions/solicitation-provisions.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/solicitation-provisions/solicitation-provisions.component.html
@@ -1,1 +1,130 @@
-<p>solicitation-provisions works!</p>
+<form id="solicitationProvisions">
+
+    <div class="card border-warning p-4 mb-4">
+        <p>The following solicitation provisions are based on SCP-FSS-001 and are automatically included as applicable
+            for this schedule. Each provision contains specific factors, which are laid out in the table below. Please
+            respond completely and thoroughly to each provision as outlined in the provision-specific directions.</p>
+    </div>
+
+    <div class="table2">
+        <table aria-labelledby="h1val" class="table table-striped table-bordered buttonsTable">
+            <thead>
+                <tr>
+                    <th width="70%" scope="col">Provision</th>
+                    <th width="10%" scope="col">Status</th>
+                    <th width="10%" scope="col">Respond</th>
+                    <th width="10%" scope="col">Edit</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td colspan="4">&nbsp;&nbsp;<span style="font-weight:bold">Technical Proposal</span></td>
+                </tr>
+                <tr>
+                    <td style="TEXT-ALIGN: LEFT">
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+                        Corporate Experience<span class="required"> *</span><span
+                            class="visually-hidden">Required</span></td>
+                    <td>
+                        Incomplete
+                    </td>
+                    <td class="tbl-button"><a class="btn btn-primary btn-sm"
+                            href="https://eoffer-test.fas.gsa.gov/eOffer/provisionResponse.do?method=view&amp;provision=SCP-FSS-001&amp;section=CorporateExperience">
+
+                            Respond
+                        </a></td>
+                    <td class="tbl-button"></td>
+                </tr>
+                <tr>
+                    <td style="TEXT-ALIGN: LEFT">
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+                        Past Performance<span class="required"> *</span><span class="visually-hidden">Required</span>
+                    </td>
+                    <td>
+                        Incomplete
+                    </td>
+                    <td class="tbl-button"><a class="btn btn-primary btn-sm"
+                            href="https://eoffer-test.fas.gsa.gov/eOffer/provisionResponse.do?method=view&amp;provision=SCP-FSS-001&amp;section=PastPerformance">
+
+                            Respond
+                        </a></td>
+                    <td class="tbl-button"></td>
+                </tr>
+                <tr>
+                    <td style="TEXT-ALIGN: LEFT">
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+                        Quality Control<span class="required"> *</span><span class="visually-hidden">Required</span>
+                    </td>
+                    <td>
+                        Incomplete
+                    </td>
+                    <td class="tbl-button"><a class="btn btn-primary btn-sm"
+                            href="https://eoffer-test.fas.gsa.gov/eOffer/provisionResponse.do?method=view&amp;provision=SCP-FSS-001&amp;section=QualityControl">
+
+                            Respond
+                        </a></td>
+                    <td class="tbl-button"></td>
+                </tr>
+                <tr>
+                    <td style="TEXT-ALIGN: LEFT">
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+                        Relevant Project Experience<span class="required"> *</span><span
+                            class="visually-hidden">Required</span></td>
+                    <td>
+                        Incomplete
+                    </td>
+                    <td class="tbl-button"><a class="btn btn-primary btn-sm"
+                            href="https://eoffer-test.fas.gsa.gov/eOffer/provisionResponse.do?method=view&amp;provision=SCP-FSS-001&amp;section=RelevantProjectExperience">
+
+                            Respond
+                        </a></td>
+                    <td class="tbl-button"></td>
+                </tr>
+                <tr>
+                    <td style="TEXT-ALIGN: LEFT">
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+                        Trade Agreements Act (TAA) Compliance<span class="required"> *</span><span
+                            class="visually-hidden">Required</span></td>
+                    <td>
+                        Incomplete
+                    </td>
+                    <td class="tbl-button"><a class="btn btn-primary btn-sm"
+                            href="https://eoffer-test.fas.gsa.gov/eOffer/provisionResponse.do?method=view&amp;provision=SCP-FSS-001&amp;section=TradeAgreementsAct">
+
+                            Respond
+                        </a></td>
+                    <td class="tbl-button"></td>
+                </tr>
+                <tr>
+                    <td colspan="4">&nbsp;&nbsp;<span style="font-weight:bold">Services Contract Act Labor Matrix</span>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="TEXT-ALIGN: LEFT">
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+                        SCA Matrix<span class="required"> *</span><span class="visually-hidden">Required</span></td>
+                    <td>
+                        Incomplete
+                    </td>
+                    <td class="tbl-button"><a class="btn btn-primary btn-sm"
+                            href="https://eoffer-test.fas.gsa.gov/eOffer/provisionResponse.do?method=view&amp;provision=SCP-FSS-001&amp;section=scaMatrix">
+
+                            Respond
+                        </a></td>
+                    <td class="tbl-button"></td>
+                </tr>
+            </tbody>
+        </table>
+        <div class="button-row">
+
+            <input type="submit" name="saveAndContinue" value="Save and Continue" class="btn btn-primary">
+            <br>
+        </div>
+    </div>
+</form>
