--- a/src/app/modules/supplier-portal/views/supplier-portal-home/supplier-portal-home.component.html
+++ b/src/app/modules/supplier-portal/views/supplier-portal-home/supplier-portal-home.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container py-5">
     <div class="row">
         <div class="card shadow col">
             <div class="card-header py-3">Header title</div>
