--- a/src/assets/theme/eoffer.css
+++ b/src/assets/theme/eoffer.css
@@ -7,3 +7,12 @@ span.datatable-header-cell-label {
 	font-size: 18px !important;
 }
 /* - - - - - - - - - - - - - - - - - */
+
+.h1, .h2, .h3, .h4, .h5, .h6 {
+	color: black;
+}
+
+
+.panel-title .h1, .panel-title .h2, .panel-title .h3, .panel-title .h4, .panel-title .h5, .panel-title .h6 {
+	color: #2277aa;
+}
