Updates to home page and offers list.

--- a/src/app/modules/e-sell/views/home/toolbox/toolbox.component.html
+++ b/src/app/modules/e-sell/views/home/toolbox/toolbox.component.html
@@ -20,7 +20,7 @@
   </div>
   <div class="col-lg-4 col-md-5 p-0 bg-gsa-warm-grey-2">
     
-      <img src="assets/images/content-art/home-img.jpg" class="img-responsive">
+      <img src="assets/images/content-art/home-img2.jpeg" class="img-responsive float-right d-inline-block" style=" height: 100%; max-width: initial"> 
     
   </div>
 </div>
