--- a/src/app/modules/supplier-portal/layouts/supplier-portal-header/supplier-portal-header.component.html
+++ b/src/app/modules/supplier-portal/layouts/supplier-portal-header/supplier-portal-header.component.html
@@ -27,6 +27,13 @@
       <ul class="navbar-nav">
         
         <li class="nav-item active">
+          <button [routerLink]="['/home']" routerLinkActive="active" id="button-home"  type="button" class="btn nav-link" style="white-space: nowrap;" >
+            <span class="fal fa-home mr-1"></span> 
+            <span class="nav-link-label">Home</span>
+          </button>
+        </li>
+        
+        <li class="nav-item active">
           <button [routerLink]="['/supplier-portal/home']" routerLinkActive="active" id="button-home"  type="button" class="btn nav-link" style="white-space: nowrap;" >
             <span class="fal fa-file-contract mr-1"></span> 
             <span class="nav-link-label">Offers</span>
