--- a/src/app/modules/supplier-portal/views/supplier-portal-home/supplier-portal-home.component.html
+++ b/src/app/modules/supplier-portal/views/supplier-portal-home/supplier-portal-home.component.html
@@ -1,9 +1,9 @@
 <div class="container py-5">
     <div class="row">
-        <div class="card shadow col">
-            <div class="card-header py-3">Header title</div>
+        <div class="card shadow col mb-4">
+            <div class="card-header py-3"><span class="h5 pt-2 d-inline-block">Saved Offers</span><button class="btn btn-primary float-right">New Offer</button></div>
             <div class="card-body">
-                <ngx-datatable class="striped" [rows]="rows" [columns]="columns" [headerHeight]="50" [footerHeight]="50" 
+                <ngx-datatable class="striped" [rows]="savedOffers.rows" [columns]="savedOffers.columns" [headerHeight]="50" [footerHeight]="50" 
                     [rowHeight]="50" [scrollbarV]="true"
                     [columnMode]="ColumnMode">
 
@@ -40,6 +40,53 @@
                         <ngx-datatable-column name="Actions" [flexGrow]="1">
                             <ng-template let-value="value" ngx-datatable-cell-template>                        
                                 <button class="btn btn-primary" [routerLink]="['/supplier-portal/offer/pathway-to-success']">Edit</button>
+                            </ng-template>
+                        </ngx-datatable-column>
+                </ngx-datatable>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="card shadow col mb-4">
+            <div class="card-header py-3"><span class="h5 pt-2 d-inline-block">Submitted Offers</span></div>
+            <div class="card-body">
+                <ngx-datatable class="striped" [rows]="submittedOffers.rows" [columns]="submittedOffers.columns" [headerHeight]="50" [footerHeight]="50" 
+                    [rowHeight]="50" [scrollbarV]="true"
+                    [columnMode]="ColumnMode">
+
+                        <ngx-datatable-column [width]="50" [resizeable]="false" [sortable]="false" [draggable]="false"
+                            [canAutoResize]="false">
+                            <ng-template let-value="value" ngx-datatable-cell-template>
+                            </ng-template>
+                        </ngx-datatable-column>
+
+                        <ngx-datatable-column name="Offer ID" [flexGrow]="1" [minWidth]="200">
+                            <ng-template let-value="value" ngx-datatable-cell-template>
+                                {{ value }}
+                            </ng-template>
+                        </ngx-datatable-column>
+
+                        <ngx-datatable-column name="Schedule" [flexGrow]="1">
+                            <ng-template let-value="value" ngx-datatable-cell-template>
+                                {{ value }}
+                            </ng-template>
+                        </ngx-datatable-column>
+
+                        <ngx-datatable-column name="Last Update" [flexGrow]="1">
+                            <ng-template let-value="value" ngx-datatable-cell-template>
+                                {{ value }}
+                            </ng-template>
+                        </ngx-datatable-column>
+
+                        <ngx-datatable-column name="Status" [flexGrow]="1">
+                            <ng-template let-value="value" ngx-datatable-cell-template>
+                                {{ value }}
+                            </ng-template>
+                        </ngx-datatable-column>
+
+                        <ngx-datatable-column name="Actions" [flexGrow]="1">
+                            <ng-template let-value="value" ngx-datatable-cell-template>                        
+                                <button class="btn btn-primary" [routerLink]="['/supplier-portal/offer/pathway-to-success']">View</button>
                             </ng-template>
                         </ngx-datatable-column>
                 </ngx-datatable>
